Multires: The "Simple" subdivision type is not working as it should (it's still smoothing the mesh) #74869

Closed
opened 2020-03-18 04:07:06 +01:00 by TheRedWaxPolice · 18 comments

System Information
Win 10

Blender Version
Broken: blender-2.83-dc2df8307f41-windows64
Worked: Before the recent multires fixes?

Short description of error
The "Simple" subdivision type is not working as it should, It starts smoothing the mesh after the second subdivision level
Also if you switch back to Catmull-Clark after the steps below, the mesh will be weirdly deformed

Exact steps for others to reproduce the error
Launch Blender
Add a Multires mod to the cube
Switch to Simple mode
Click Subdivide once (okay)
Click Subdivide again (now it starts smoothing the mesh)
(Now you can switch back to Catmull-Clark type to see the deformed mesh)

See:

2020-03-18_03-30-48.mp4

**System Information** Win 10 **Blender Version** Broken: blender-2.83-dc2df8307f41-windows64 Worked: Before the recent multires fixes? **Short description of error** The "Simple" subdivision type is not working as it should, It starts smoothing the mesh after the second subdivision level **Also** if you switch back to Catmull-Clark after the steps below, the mesh will be weirdly deformed **Exact steps for others to reproduce the error** Launch Blender Add a Multires mod to the cube Switch to Simple mode Click Subdivide once (okay) Click Subdivide again (now it starts smoothing the mesh) (Now you can switch back to Catmull-Clark type to see the deformed mesh) **See:** [2020-03-18_03-30-48.mp4](https://archive.blender.org/developer/F8413164/2020-03-18_03-30-48.mp4)

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

CC @Sergey

Can confirm. CC @Sergey

Added subscriber: @brecht

Added subscriber: @brecht

@Sergey, can we just remove simple mode? There's not really any hope of smooth propagation with simple subdivision, better not to support it at all.

@Sergey, can we just remove simple mode? There's not really any hope of smooth propagation with simple subdivision, better not to support it at all.

@brecht, this is something what i am not sure about, and not sure about best timeline.

For the Subdivision Surface modifier it will make sense to move Simple from being a modifier option to a separate modifier. Will make Subdivision Modifier code smaller and easier (since it will be limited to Catmull-Clark only), and will bring more efficient Simple Subdivisions functionality.

For the multires I am not so sure. On the one hand having Simple options is very tricky: starting from technical aspects of tangent space not being continuous, and the going into topics like what's supposed to happen when you toggle Simple/Catmull-Clark. So having Simple option removed seems to have single rock-solid workflow.

On another hand, there might be some very good usecase (which I personally am not aware of) for being able to do simple subdivisions on multires. And technically it should be possible to propagate things in a bilinear fashion (which kind of fits overall behavior of the modifier, and, hopefully can be a simple tweak in the propagation code without causing propagation artifacts).

I am all fine for removing this obscure option because it just causes mathematical hell, but I don't really want to remove whole class of workflows because of that. Do you remember why this was added as an option in the first place?

@brecht, this is something what i am not sure about, and not sure about best timeline. For the Subdivision Surface modifier it will make sense to move Simple from being a modifier option to a separate modifier. Will make Subdivision Modifier code smaller and easier (since it will be limited to Catmull-Clark only), and will bring more efficient Simple Subdivisions functionality. For the multires I am not so sure. On the one hand having Simple options is very tricky: starting from technical aspects of tangent space not being continuous, and the going into topics like what's supposed to happen when you toggle Simple/Catmull-Clark. So having Simple option removed seems to have single rock-solid workflow. On another hand, there might be some very good usecase (which I personally am not aware of) for being able to do simple subdivisions on multires. And technically it should be possible to propagate things in a bilinear fashion (which kind of fits overall behavior of the modifier, and, hopefully can be a simple tweak in the propagation code without causing propagation artifacts). I am all fine for removing this obscure option because it just causes mathematical hell, but I don't really want to remove whole class of workflows because of that. Do you remember why this was added as an option in the first place?

As far as I know it only exists is because it was copied over from the subsurf modifier with all the other settings. Of course someone might have found a use for it afterwards.

Even if it's possible to make it work, I think the goal for 2.83 should be to make the basics of multires work well. I would rather time be spent on making the basic use case for multires work well than worrying about every possible use case.

As far as I know it only exists is because it was copied over from the subsurf modifier with all the other settings. Of course someone might have found a use for it afterwards. Even if it's possible to make it work, I think the goal for 2.83 should be to make the basics of multires work well. I would rather time be spent on making the basic use case for multires work well than worrying about every possible use case.

@Sergey @brecht
The "Simple" mode (sometimes called Flat) is actually something that exists in the "multires" system of other applications, and it's mostly used to subdivide a base mesh without lose volume, before going to the "smooth" (Catmull-Clark) mode.
The difference in Blender is that,, both modes (Catmull-Clark/Simple) they don't work together, we can only either use Catmull-Clark or Simple, while in other apps they kinda work together.

For example, let's say you add the Multires to the cube, switch to Simple mode and subdivide 4 times. You should get this result:
image.png

Now if you switch to Catmull-Clark, this is what should happen (nothing should happen)
image.png
Yeah, as you can see above, nothing should happen when you switch modes.

Things only happen when you start subdividing.. So if you hit subdivide now in Catmull-Clark mode, this is what should happen:
image.png
As you can see, the smoothing starts happening based on what's already there (in this case the subdivisions generated by the Simple mode). This is how it works on apps like Zbrush etc... There's no actually switching modes.. The two types of subdivisions are kinda applied on top of each other when you subdivide, if that makes sense..

I hope you understand my crappy english... 🙂

@Sergey @brecht The "Simple" mode *(sometimes called Flat)* is actually something that exists in the "multires" system of other applications, and it's mostly used to subdivide a base mesh without lose volume, before going to the "smooth" (Catmull-Clark) mode. The difference in Blender is that,, both modes (Catmull-Clark/Simple) they don't work together, we can only either use Catmull-Clark or Simple, while in other apps they kinda work together. For example, let's say you add the Multires to the cube, switch to Simple mode and subdivide 4 times. You should get this result: ![image.png](https://archive.blender.org/developer/F8414581/image.png) Now if you switch to Catmull-Clark, this is what should happen **(nothing should happen)** ![image.png](https://archive.blender.org/developer/F8414588/image.png) Yeah, as you can see above, nothing should happen when you switch modes. Things only happen when you start subdividing.. So if you hit subdivide now in Catmull-Clark mode, this is what should happen: ![image.png](https://archive.blender.org/developer/F8414600/image.png) As you can see, the smoothing starts happening based on what's already there *(in this case the subdivisions generated by the Simple mode)*. This is how it works on apps like Zbrush etc... There's no actually switching modes.. The two types of subdivisions are kinda applied on top of each other when you subdivide, if that makes sense.. *I hope you understand my crappy english...* 🙂

That seems pretty similar to subdividing in edit mode or using creases, it's not clear to me this use case require a simple subdivision mode.

This is actually how creases are mathematically defined: there are crease values that correspond to applying N linear subdivisions followed by smooth subdivisions. It's just that with creases you are also able to get values between N and N+1.

That seems pretty similar to subdividing in edit mode or using creases, it's not clear to me this use case require a simple subdivision mode. This is actually how creases are mathematically defined: there are crease values that correspond to applying N linear subdivisions followed by smooth subdivisions. It's just that with creases you are also able to get values between N and N+1.
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Member

If we want to support that kind of workflow from the modifier, this should be a "subdivide simple" operator instead of a mode of the modifier. Then, when using this option, the next subdivision level coordinates will be initialized to the subdivide simple positions when creating that level, but propagation will continue working as usual.
On the other hand, we can simple remove it. It is possible to do the same thing by unsubdividing from multires (which is planned) after subdividing the mesh in edit mode or with a regular subdiv modifier in simple mode.

If we want to support that kind of workflow from the modifier, this should be a "subdivide simple" operator instead of a mode of the modifier. Then, when using this option, the next subdivision level coordinates will be initialized to the subdivide simple positions when creating that level, but propagation will continue working as usual. On the other hand, we can simple remove it. It is possible to do the same thing by unsubdividing from multires (which is planned) after subdividing the mesh in edit mode or with a regular subdiv modifier in simple mode.

Added subscriber: @NelsonNAS

Added subscriber: @NelsonNAS

In #74869#893952, @PabloDobarro wrote:
It is possible to do the same thing by unsubdividing from multires (which is planned) after subdividing the mesh in edit mode or with a regular subdiv modifier in simple mode.

This sounds like a very convoluted workflow imo.
I'd very much prefer to have it working as TheRedWaxPolice described which is in line with your first suggestion. (zbrush style)
The convenience and comfort of having it working like that would be just amazing.

> In #74869#893952, @PabloDobarro wrote: > It is possible to do the same thing by unsubdividing from multires (which is planned) after subdividing the mesh in edit mode or with a regular subdiv modifier in simple mode. This sounds like a very convoluted workflow imo. I'd very much prefer to have it working as TheRedWaxPolice described which is in line with your first suggestion. (zbrush style) The convenience and comfort of having it working like that would be just amazing.

This issue was referenced by 885caa4535

This issue was referenced by 885caa4535850f655454edf746c72ab87f5dcc21

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sergey Sharybin self-assigned this 2020-03-19 12:03:13 +01:00

Added subscriber: @Debuk

Added subscriber: @Debuk

Removed subscriber: @Debuk

Removed subscriber: @Debuk
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74869
No description provided.